<resources>
    <string name="app_name" translatable="false">ghini.tour</string>

    <string name="action_zoom_gps">centre on GPS location</string>
    <string name="action_zoom_location">zoom back to location</string>
    <string name="action_zoom_world">zoom back to world</string>
    <string name="action_get_locations">get locations from server</string>
    <string name="noLocationSelected">please first select a location</string>
    <string name="noPanelSelected">this panel seems to have no audio</string>
    <string name="noGPSError">something went wrong while reading from GPS</string>
    <string name="action_about">about …</string>
    <string name="notImplementedYet">not implemented yet</string>
    <string name="aboutText">virtual tour in open air locations</string>
    <string name="action_refresh">refresh podcasts</string>
    <string name="title_activity_update">update garden podcasts</string>
</resources>
